<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color"
            android:textStyle="bold"
            android:typeface="monospace" />

        <Switch
            android:id="@+id/theme"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/theme" />

        <Switch
            android:id="@+id/magnifier"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:checked="true"
            android:duplicateParentState="false"
            android:text="@string/magnifier" />

        <Switch
            android:id="@+id/auto"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:checked="true"
            android:text="自动补全（根据高亮适配）" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:clickable="true"
            android:text="@string/lineCounts" />


        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/zoom" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/redo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="高亮选择" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="51dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="字体选择" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <Button
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="About"
            android:text="@string/about" />

        <Button
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Help"
            android:text="@string/help" />

        <Button
            android:id="@+id/get"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Get"
            android:text="@string/hub" />

        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:onClick="Start"
            android:text="@string/start"
            android:textSize="24sp" />

    </LinearLayout>
</ScrollView>